feat: Adding transitions

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -32,10 +32,14 @@
   }
 
   .btn {
-    @apply rounded-[16px] p-[16px] text-[26px] bg-primary w-full font-bold text-white tracking-[1px]  flex justify-center items-center transition-all duration-300;
+    @apply rounded-[16px] p-[16px] text-[26px] bg-primary w-full font-bold text-white tracking-[1px]  flex justify-center items-center transition-all duration-200;
   }
 
   .navEl {
     @apply text-[24px] font-bold text-secondary text-center leading-7;
+  }
+
+  .active {
+    @apply text-primary;
   }
 }
